overflow fix for site layout

--- a/app/stylesheets/core/base.styl
+++ b/app/stylesheets/core/base.styl
@@ -5,7 +5,6 @@ body
   height: 100%
   font-family: $dinMedium
   color: $mainFontColor
-  overflow-x: hidden
 
 fieldset
   border: none
