--- a/app/stylesheets/modules/head.styl
+++ b/app/stylesheets/modules/head.styl
@@ -5,6 +5,7 @@ $skyColor = #b7e7e7
   width: 100%
   border-bottom: 2px solid $mainRedColor
   box-sizing: border-box
+  overflow: hidden
 
 .car
   position: absolute
